Fix urls from third-electrical-site-react to electrical-site-3-react

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "third-electrical-site-react",
+  "name": "Electrical-Site-3-React",
   "private": true,
   "version": "0.0.0",
   "type": "module",
